introducing HtmlUtils